--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.5" />
+            android:layout_weight="1.7" />
 
         <LinearLayout
             android:layout_width="300dp"
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:ems="10"
-                android:hint="이메일을 입력하세요"
+                android:hint="E-mail"
                 android:textSize="15sp"
                 android:inputType="textEmailAddress"
                 android:layout_gravity="center"
@@ -70,7 +70,7 @@
                 android:layout_marginTop="10dp"
                 android:ems="10"
                 android:textSize="15sp"
-                android:hint="비밀번호를 입력하세요"
+                android:hint="Password"
                 android:inputType="textPassword"
                 android:gravity="center_horizontal"
                 android:layout_gravity="center"
@@ -80,7 +80,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5" />
+            android:layout_weight="0.3" />
 
     </LinearLayout>
     <LinearLayout
