--- a/app/src/main/res/layout/fragment_one_word.xml
+++ b/app/src/main/res/layout/fragment_one_word.xml
@@ -6,6 +6,7 @@
 
     <ImageView
         android:id="@+id/wordimage"
+        android:background="#00000000"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginBottom="20dp"
