--- a/app/src/main/res/layout/fragment_one_word.xml
+++ b/app/src/main/res/layout/fragment_one_word.xml
@@ -6,7 +6,8 @@
 
     <ImageView
         android:id="@+id/wordimage"
-        android:background="#00000000"
+        android:background="@drawable/ww_logo"
+        android:alpha="0.5"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginBottom="20dp"
