--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -52,6 +52,8 @@
         android:textColor="#000000"
         android:textSize="20sp" />
 
+
+
     <EditText
         android:id="@+id/answer"
         android:layout_width="250dp"
@@ -71,7 +73,7 @@
         android:layout_alignBottom="@id/answer"
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/answer"
+        android:layout_alignParentRight="true"
         android:background="#00FFFFFF"
         android:text="NEXT"
         android:textSize="10sp" />
