--- a/app/src/main/res/layout/activity_quiz_result.xml
+++ b/app/src/main/res/layout/activity_quiz_result.xml
@@ -96,22 +96,23 @@
         android:id="@+id/retry"
         android:layout_width="170dp"
         android:layout_height="40dp"
-        android:layout_below="@id/feedback"
+        android:layout_alignParentBottom="true"
+
         android:layout_gravity="left"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/radius"
         android:gravity="center"
         android:text="틀린 문제 다시 풀기"
-        android:textColor="#000000"/>
+        android:textColor="#000000" />
 
     <Button
         android:id="@+id/finish"
         android:layout_width="170dp"
         android:layout_height="40dp"
-        android:layout_below="@id/feedback"
         android:layout_gravity="right"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
         android:layout_toRightOf="@id/retry"
         android:background="@drawable/radius"
         android:gravity="center"
