--- a/app/src/main/res/layout/activity_short.xml
+++ b/app/src/main/res/layout/activity_short.xml
@@ -9,10 +9,9 @@
         android:id="@+id/menu"
         android:layout_width="25dp"
         android:layout_height="25dp"
+        android:alpha="0"
         android:contentDescription="@string/Stringimg"
-        android:src="@drawable/user"
-        android:alpha="0"/>
-
+        android:src="@drawable/user" />
 
     <TextView
         android:id="@+id/quiz"
@@ -24,6 +23,15 @@
         android:text="@string/shortCut"
         android:textColor="#000000"
         android:textSize="18sp" />
+
+    <ImageView
+        android:id="@+id/word_btn"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignTop="@id/quiz"
+        android:layout_alignParentRight="true"
+        android:scaleType="centerInside"
+        android:src="@drawable/arrow" />
 
     <ImageView
         android:id="@+id/slide1"
