--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -59,7 +59,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/Question"
-        android:layout_marginLeft="50dp"
+        android:layout_centerInParent="true"
         android:layout_marginTop="50dp"
         android:gravity="center_horizontal"
         android:hint="여기에 답을 입력하세요."
