--- a/app/src/main/res/layout/activity_quiz_result.xml
+++ b/app/src/main/res/layout/activity_quiz_result.xml
@@ -12,8 +12,8 @@
         android:id="@+id/menu"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:src="@drawable/user"
-        android:alpha="0"/>
+        android:alpha="0"
+        android:src="@drawable/user" />
 
 
     <TextView
@@ -33,63 +33,71 @@
         android:layout_below="@id/quiz"
         android:src="@drawable/line3" />
 
+    <LinearLayout
+        android:id="@+id/rate"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_below="@+id/quiz"
+        android:layout_marginTop="10dp"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/correct"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="100dp"
+            android:layout_below="@+id/quiz"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="20dp"
+            android:gravity="right|center_vertical"
+            android:textSize="50sp" />
+
+        <TextView
+            android:id="@+id/total"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="100dp"
+            android:layout_below="@+id/quiz"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical"
+            android:layout_alignParentRight="true"
+            android:paddingBottom="10dp"
+            android:textSize="30sp" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/wrongQ"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/total"
+        android:layout_below="@id/rate"
         android:paddingLeft="15dp"
-
-
         android:text="틀린 문제"
         android:textColor="#000000"
-        android:textSize="15sp"/>
-
+        android:textSize="15sp"
+        android:layout_marginTop="20dp"/>
 
 
     <LinearLayout
         android:id="@+id/feedback"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         android:layout_below="@+id/wrongQ"
         android:layout_marginTop="7dp"
         android:background="#F6F6F6"
         android:orientation="vertical">
 
 
-
         <ListView
             android:id="@+id/review"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="250dp"
+            android:divider="#00FFFFFF"
             android:text=" "
             android:textColor="#000000"
-            android:textSize="15sp"
-            android:divider="#00FFFFFF"/>
+            android:textSize="15sp" />
     </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/correct"
-        android:layout_width="170dp"
-        android:layout_height="100dp"
-        android:layout_below="@+id/quiz"
-        android:layout_marginTop="20dp"
-        android:gravity="right|center_vertical"
-        android:textSize="50sp" />
-
-    <TextView
-        android:id="@+id/total"
-        android:layout_width="170dp"
-        android:layout_height="100dp"
-        android:layout_below="@+id/quiz"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="30dp"
-        android:layout_toRightOf="@id/correct"
-        android:gravity="center_vertical"
-        android:paddingBottom="10dp"
-        android:textSize="30sp" />
 
 
     <Button
@@ -120,4 +128,3 @@
         android:textColor="#000000" />
 
 </RelativeLayout>
-
