--- a/app/src/main/res/layout/activity_quiz1.xml
+++ b/app/src/main/res/layout/activity_quiz1.xml
@@ -10,7 +10,8 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:contentDescription="@string/Stringimg"
-        android:src="@drawable/home" />
+        android:src="@drawable/home"
+        android:alpha = "0"/>
 
 
     <TextView
@@ -59,7 +60,7 @@
         android:id="@+id/shortcut_btn"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_below="@id/q"
+        android:layout_above="@id/bookmark"
         android:layout_marginTop="130dp"
         android:background="@drawable/radius"
         android:textColor="#000000" />
@@ -69,8 +70,9 @@
         android:id="@+id/bookmark"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_below="@id/shortcut_btn"
+        android:layout_above="@id/button3"
         android:layout_marginTop="15dp"
+
         android:background="@drawable/radius"
         android:textColor="#000000" />
 
@@ -78,8 +80,10 @@
         android:id="@+id/button3"
         android:layout_width="350dp"
         android:layout_height="50dp"
+
         android:layout_marginTop="15dp"
-        android:layout_below="@id/bookmark"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/radius"
         android:textColor="#000000" />
 
