--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -9,7 +9,8 @@
         android:id="@+id/menu"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:src="@drawable/home" />
+        android:src="@drawable/home"
+        android:alpha = "0"/>
 
 
     <TextView
@@ -52,10 +53,9 @@
         android:textSize="20sp" />
 
 
-
     <EditText
         android:id="@+id/answer"
-        android:layout_width="250dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/Question"
         android:layout_centerInParent="true"
